Release v0.3.4
